<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/goToSingle"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#009688"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/single_game"
                app:cornerRadius="0dp"
                tools:text="@string/single_game" />

            <Button
                android:id="@+id/goToDouble"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#2196F3"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/double_game"
                app:cornerRadius="0dp"
                tools:text="@string/double_game" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#FF9800"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/round_trip_game"
                app:cornerRadius="0dp"
                tools:text="@string/round_trip_game" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#E91E63"
                android:fontFamily="sans-serif-medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/mixed_game"
                app:cornerRadius="0dp"
                tools:text="@string/mixed_game" />

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#CDDC39"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/individual_tournaments_game"
                app:cornerRadius="0dp"
                tools:text="@string/individual_tournaments_game" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#3F51B5"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/team_tournaments_game"
                app:cornerRadius="0dp"
                tools:text="@string/team_tournaments_game" />

            <Button
                android:id="@+id/button7"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#FF5722"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/pub_game"
                app:cornerRadius="0dp"
                tools:text="@string/pub_game" />

            <Button
                android:id="@+id/button8"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#673AB7"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/without_table_game"
                app:cornerRadius="0dp"
                tools:text="@string/without_table_game" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>