<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_game_plaayer1"
                tools:text="@string/single_game_plaayer1" />

            <EditText
                android:id="@+id/playerName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/single_game_plaayer1"
                tools:text="@string/single_game_plaayer1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_game_player2"
                tools:text="@string/single_game_player2" />

            <EditText
                android:id="@+id/playerName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/single_game_player2"
                tools:text="@string/single_game_player2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/winning_sets"
                tools:text="@string/winning_sets" />

            <Spinner
                android:id="@+id/spinnerWinGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/wingames_array" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points"
                tools:text="@string/points" />

            <Spinner
                android:id="@+id/spinnerPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/single_points_array" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/playSingleGame"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:backgroundTint="#009688"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn_start"
                app:cornerRadius="0dp"
                tools:text="@string/btn_start" />

            <Button
                android:id="@+id/singleSetupBackBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="@string/btn_back"
                app:cornerRadius="0dp"
                tools:text="@string/btn_back" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>